Refactor and enhance category and event features
Updated ICategoryRepository with GetCategoriesWithEvents method.
Moved and redefined several classes in the Events namespace.
Updated csproj to include new folders for commands and queries.
Enhanced MappingProfile with new mappings for categories and events.
Added new classes for handling category-related queries and VMs.

--- a/src/GloboTicket.TicketManagement.Application/GloboTicket.TicketManagement.Application.csproj
+++ b/src/GloboTicket.TicketManagement.Application/GloboTicket.TicketManagement.Application.csproj
@@ -15,4 +15,11 @@
     <ProjectReference Include="..\GloboTicket.TicketManagement.Domain\GloboTicket.TicketManagement.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\Categories\Comands\" />
+    <Folder Include="Features\Events\Comands\CreateEvent\" />
+    <Folder Include="Features\Orders\Comands\" />
+    <Folder Include="Features\Orders\Queries\" />
+  </ItemGroup>
+
 </Project>
