Add initial migration and update project structure
- Added necessary using directives for `Microsoft.EntityFrameworkCore`, `MediatR`, and other namespaces.
- Enabled Swagger generation in `StartupExtensions` for API documentation.
- Reordered middleware in `ConfigurePipeline` for proper CORS handling.
- Updated `GloboTicket.TicketManagement.Api.csproj` with new package references.
- Modified `appsettings.Development.json` for updated connection strings and email settings.
- Renamed `GetEventListQuery` to `GetEventsListQuery` for consistency.
- Updated `GetEventsListQueryHandler` to handle the new query.
- Enhanced `MappingProfile` with new DTO and command mappings.
- Changed `BaseResponse` to initialize `ValidationErrors` by default.
- Added service registration for `ICsvExporter` in `InfrastructureServiceRegistrationExtensions`.
- Updated `GloboTicket.TicketManagement.Infrastructure.csproj` to include `CsvHelper`.
- Created new controllers for categories, events, and orders.
- Added utility classes for file result content type handling in Swagger.
- Introduced `ICsvExporter` interface and `CsvExporter` implementation for CSV export.
- Added new DTOs and queries to support event export functionality.
- Reintroduced `GetEventsListQuery` for event list queries.
- Implemented `CsvExporter` for CSV export logic.
- Introduced initial migration class `Initial` to create and seed `Categories`, `Orders`, and `Events` tables.
- Added auto-generated migration file `20240922185200_Initial.Designer.cs`.
- Created `GloboTicketDbContextModelSnapshot.cs` to represent the current state of the model.

--- a/src/GloboTicket.TicketManagement.Api/GloboTicket.TicketManagement.Api.csproj
+++ b/src/GloboTicket.TicketManagement.Api/GloboTicket.TicketManagement.Api.csproj
@@ -13,10 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\v1\" />
-  </ItemGroup>
-
-  <ItemGroup>
+	  <PackageReference Include="MediatR" Version="12.4.1" />
 	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.3" />
 	  <PackageReference Include="Asp.Versioning.Http" Version="8.1.0" />
 	  <PackageReference Include="Asp.Versioning.Mvc" Version="8.1.0" />
