--- a/src/GloboTicket.TicketManagement.Api/appsettings.Development.json
+++ b/src/GloboTicket.TicketManagement.Api/appsettings.Development.json
@@ -6,13 +6,13 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost;Initial Catalog=GloboTicketDb;User ID=sa;Password=45210@mp5;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "GloboTicketDbConnection": "Data Source=localhost;Initial Catalog=GloboTicketDb;User ID=sa;Password=45210@mp5;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "EmailSettings": {
-    "FromAddress": "test.gmail.com",
     "ApiKey": "api key",
-    "FromName": "Admin"
+    "FromName": "Admin",
+    "FromAddress": "test.gmail.com"
   },
   "ApiUrl": "http://localhost:7020",
-  "BlazorUrl":  "http://localhost:7080"
+  "BlazorUrl": "http://localhost:7080"
 }
