--- a/src/GloboTicket.TicketManagement.Api/GloboTicket.TicketManagement.Api.csproj
+++ b/src/GloboTicket.TicketManagement.Api/GloboTicket.TicketManagement.Api.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
 	  <PackageReference Include="MediatR" Version="12.4.1" />
+	  <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
 	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.3" />
 	  <PackageReference Include="Asp.Versioning.Http" Version="8.1.0" />
 	  <PackageReference Include="Asp.Versioning.Mvc" Version="8.1.0" />
