Add new Blazor app and implement core features
Added a new Blazor WebAssembly project `GloboTicket.TicketManagement.App` to the solution. Updated the solution configuration to include build configurations for the new project. Introduced `libman.json` for managing client-side libraries, specifically adding Bootstrap.

Configured services and HTTP clients in `Program.cs` for the Blazor application, including authentication and data services. Added `_Imports.razor` for common namespaces and components. Implemented `CookieAuthenticationStateProvider.cs` and `CookieHandler.cs` for cookie-based authentication.

Created various components and services:
- `Pager.razor` and `Pager.razor.cs` for pagination.
- `PaginatedList.cs` for managing paginated data.
- Interfaces for data services: `IAuthenticationService.cs`, `ICategoryDataService.cs`, `IEventDataService.cs`, and `IOrderDataService.cs`.
- `AddCategory.razor` and `AddCategory.razor.cs` for adding new categories.
- `CategoryOverview.razor` and `CategoryOverview.razor.cs` for displaying event categories.
- `EventDetails.razor` and `EventDetails.razor.cs` for managing event details.

Updated `App.razor` for routing and authentication state management. Added `EventOverview.razor` and `EventOverview.razor.cs` for event overview and export functionality. Added `Home.razor`, `Index.razor`, `Login.razor`, `Register.razor`, and `TicketSales.razor` pages with their respective code-behind files.

Implemented `AuthenticationService.cs` for user authentication, registration, and logout. Updated data services for categories, events, and orders. Added `ApiResponse.cs` for handling API responses and `BaseDataService.cs` for base data service functionality.

Updated layout and navigation:
- `MainLayout.razor` and `MainLayout.razor.css` for new layout structure.
- `NavMenu.razor` and `NavMenu.razor.css` for navigation menu.

Added several ViewModel classes under `GloboTicket.TicketManagement.App.ViewModels` for event management, user aut

--- a/src/GloboTicket.TicketManagement.Api/appsettings.Development.json
+++ b/src/GloboTicket.TicketManagement.Api/appsettings.Development.json
@@ -13,6 +13,6 @@
     "FromName": "Admin",
     "FromAddress": "test.gmail.com"
   },
-  "ApiUrl": "http://localhost:7020",
-  "BlazorUrl": "http://localhost:7080"
+  "ApiUrl": "https://localhost:7020",
+  "BlazorUrl": "https://localhost:7080"
 }
