Add identity management and logging enhancements
- Added `GloboTicket.TicketManagement.Identity` project for identity management.
- Updated solution configuration to include the new project.
- Introduced `ExceptionHandlerMiddleware` for custom exception handling.
- Updated `StartupExtensions` to include identity services and middleware.
- Integrated Serilog for logging in `Program.cs` and `appsettings`.
- Enhanced `CreateEventCommandHandler` and `UpdateEventCommandHandler` with better error handling and logging.
- Updated `.csproj` files with necessary references and dependencies.
- Created `GloboTicketIdentityDbContext` for identity management.
- Added `IdentityServiceExtensions` for configuring identity services.
- Introduced initial migration for identity schema setup, including tables for roles, users, and related claims, logins, roles, and tokens.
- Defined `ApplicationUser` class inheriting from `IdentityUser`.

--- a/src/GloboTicket.TicketManagement.Api/appsettings.Development.json
+++ b/src/GloboTicket.TicketManagement.Api/appsettings.Development.json
@@ -6,12 +6,37 @@
     }
   },
   "ConnectionStrings": {
-    "GloboTicketDbConnection": "Data Source=localhost;Initial Catalog=GloboTicketDb;User ID=sa;Password=45210@mp5;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "GloboTicketDbConnection": "Data Source=localhost;Initial Catalog=GloboTicketDb;User ID=sa;Password=45210@mp5;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "GloboTicketIdentityConnection": "Data Source=localhost;Initial Catalog=GloboTicketDb;User ID=sa;Password=45210@mp5;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "EmailSettings": {
     "ApiKey": "api key",
     "FromName": "Admin",
     "FromAddress": "test.gmail.com"
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "Filter": [
+      {
+        "Name": "ByExcluding",
+        "Args": { "expression": "@mt = 'An unhandled exception has occurred while executing the request.'" }
+      }
+    ],
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "./logs/log-.txt",
+          "rollingInterval": "Day"
+        }
+      }
+    ]
   },
   "ApiUrl": "https://localhost:7020",
   "BlazorUrl": "https://localhost:7080"
