--- a/src/GloboTicket.TicketManagement.Api/GloboTicket - Backup.TicketManagement.Api.csproj
+++ b/src/GloboTicket.TicketManagement.Api/GloboTicket - Backup.TicketManagement.Api.csproj
@@ -8,7 +8,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\GloboTicket.TicketManagement.Application\GloboTicket.TicketManagement.Application.csproj" />
-    <ProjectReference Include="..\GloboTicket.TicketManagement.Identity\GloboTicket.TicketManagement.Identity.csproj" />
     <ProjectReference Include="..\GloboTicket.TicketManagement.Infrastructure\GloboTicket.TicketManagement.Infrastructure.csproj" />
     <ProjectReference Include="..\GloboTicket.TicketManagement.Persistence\GloboTicket.TicketManagement.Persistence.csproj" />
   </ItemGroup>
@@ -32,7 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="logs\" />
+    <Folder Include="NewFolder\" />
   </ItemGroup>
 
 </Project>
