--- a/src/GloboTicket.TicketManagement.Api/appsettings.Production.json
+++ b/src/GloboTicket.TicketManagement.Api/appsettings.Production.json
@@ -4,5 +4,40 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ConnectionStrings": {
+    "GloboTicketDbConnection": "Data Source=localhost;Initial Catalog=GloboTicketDb;User ID=sa;Password=45210@mp5;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "GloboTicketIdentityConnection": "Server=(localdb)\\MSSQLLocalDB;Database=GloboTicketIdentityDbRec1;Trusted_Connection=True;"
+  },
+  "EmailSettings": {
+    "ApiKey": "api key",
+    "FromName": "Admin",
+    "FromAddress": "test.gmail.com"
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "Filter": [
+      {
+        "Name": "ByExcluding",
+        "Args": { "expression": "@mt = 'An unhandled exception has occurred while executing the request.'" }
+      }
+    ],
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "./logs/log-.txt",
+          "rollingInterval": "Day"
+        }
+      }
+    ]
+  },
+  "ApiUrl": "https://localhost:7020",
+  "BlazorUrl": "https://localhost:7080"
 }
